# yampl-gsc-task

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: ipc_client.hpp  ipc_server.hpp  main.hpp
src/: ipc_server.cpp  main.cpp
